MUI plugin for SSG

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "gatsby": "^2.4.3",
     "gatsby-plugin-less": "^2.0.13",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-typescript": "^2.0.13",
     "gatsby-plugin-yandex-metrika": "^2.5.0",
@@ -37,10 +39,12 @@
     "@types/react-helmet": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "cp-cli": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "gh-pages": "^3.2.3",
     "husky": "^2.2.0",
     "jsdom": "^9.4.0",
     "lint-staged": "^8.1.6",
