--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "gatsby": "^2.4.3",
     "gatsby-plugin-less": "^2.0.13",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-typescript": "^2.0.13",
     "gatsby-plugin-yandex-metrika": "^2.5.0",
